Adjust cpanel styling: pad menu text prevent running under ui icons, move open state icon up a tad to center. Remove min-width on ui-tabs-nav as overflowing it's parent ui-widget-content which has fluid width. re-factor cpanel logo header & cpanel toolbar rulesets to allow toolbar to slide under left floated logo not across it in WP fluid layout - Add min-width to toolbar to counter Chromes inability to correctly handle shrink-wrapping.

--- a/dashboard/assets/css/cpanel.css
+++ b/dashboard/assets/css/cpanel.css
@@ -10,7 +10,7 @@ body.appearance_page_infinity-theme {
 div#infinity-cpanel {
 	max-width: 1000px;
 	min-width: 720px;
-	margin-top: 20px;
+	margin-top: 40px;
 }
 
 div#infinity-cpanel > .juicy-browsertabs {
@@ -36,10 +36,12 @@ div.infinity-cpanel .ui-button .ui-button-text {
 /* header */
 div#infinity-cpanel-header {
 	position: relative;
+ float: left;
 	height: 65px;
+ width: 200px;
 	border: 0 none;
-	margin-bottom: 10px;
-	padding: 10px 20px;
+	margin: -20px 0 30px;
+	padding: 0 20px 10px 20px;
 	background: transparent;
 }
 div#infinity-cpanel-header-logo {
@@ -68,10 +70,12 @@ div#infinity-cpanel-header-version {
 div#infinity-cpanel-toolbar {
 	float: right;
 	position: relative;
-	top: -80px;
+	/*top: -80px;*/
+ margin-bottom: 30px;
 	right: 15px;
 	border-radius: 0 0 3px 3px;
 	border-top: 1px solid #D6D6D6;
+ min-width: 650px; /* Chrome doesn't handle shrink-wrapping correctly */
 }
 	div#infinity-cpanel-toolbar .ui-button-icon-primary {
 		left: 0.2em;
@@ -118,10 +122,12 @@ div#infinity-cpanel-toolbar {
 div#infinity-cpanel-tabs {
 	margin: 3px;
 	background: #fff none;
+ clear: both;
 }
 	div#infinity-cpanel-tabs ul.ui-tabs-nav,
 	div#infinity-cpanel-tabs ul.ui-tabs-panel {
-		min-width: 720px;
+		/* min-width: 720px; not required, causing ul tab to overflow parent*/
+  /* ui-tabs-panel is not a ul so selector false */
 	}
 
 div#infinity-cpanel-tab-options {
